# 65ide

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
include/: mos6502.h
include/glad/: glad.h
res/: fragment.glsl  vertex.glsl
src/: event.cpp  event.h  glad.c  shader.cpp  shader.h  window.cpp  window.h
tests/: CMakeLists.txt  cpu_speed.cpp
